<resources>
    <string name="app_name">Citclops</string>
    <string name="menu_activity_error_load_gen">Load Error: </string>
    <string name="menu_activity_fuscale">Colour Measurement</string>
    <string name="menu_activity_citlops_data">Citclops Data</string>
    <string name="menu_activity_citlops_buoy">Citclops Buoy</string>
    <string name="menu_activity_preferences">Preferences</string>
    <string name="menu_activity_help">Information</string>
    <string name="menu_activity_intro_text1">Be more informed about the quality of natural waters</string>
    <string name="menu_activity_intro_text2">Be environmentally active by providing water quality data</string>
    <string name="menu_activity_profile_title">Select your profile</string>
    <string name="menu_activity_profile_msg_ok">OK</string>
    <string name="menu_activity_profile_msg_cancel">Cancel</string>
    <string name="about_title">About app</string>
    <string name="about_author">Author:</string>
    <string name="about_author_name">Citclops Consortium</string>
    <string name="about_email">Email:</string>
    <string name="about_email_name"><u>lsubirats@bdigital.org</u></string>
    <string name="about_rights">No rights reserved</string>
    <string name="about_version">Version</string>
    <string name="title_activity_fuscale">Colour Measurement</string>
    <string name="main_menu_preferences">Colour Bar Settings</string>
    <string name="main_menu_camera">Camera Settings</string>
    <string name="main_menu_about">About</string>
    <string name="main_back_to_exit">Press again to exit.</string>
    <string name="main_submenu_title">Select Parameter</string>
    <string name="main_submenu_whitebalance">White Balance</string>
    <string name="main_submenu_focusmode">Focus Mode</string>
    <string name="main_submenu_scenemode">Scene Mode</string>
    <string name="main_gps_not_found_title">Location is NOT Enabled</string>
    <string name="main_gps_not_found_message">Do you want to Enable Location?</string>
    <string name="main_gps_not_found_Yes">Yes</string>
    <string name="main_gps_not_found_No">No</string>
    <string name="main_gps_not_found_Mandatory">Location must be Enabled to Start a Measurement</string>
    <string name="main_location_not_set_Mandatory">Location must be Set for Measurement</string>
    <string name="main_dataupload_off">Data Upload is <b>OFF</b>. Remember to turn <b>ON</b> to send measurement\'s information.</string>
    <string name="main_error_opencamera">Unable to open camera</string>
    <string name="main_error_load_gen">Load Error: </string>
    <string name="main_error_no_sensors">There is no sensors to get device position</string>
    <string name="main_preferences_title">App Preferences</string>
    <string name="main_preferences_profile_title"><u>Profile Preferences</u></string>
    <string name="main_preferences_profile_select">Select Profile</string>
    <string name="main_preferences_measurement_title"><u>Measurement preferences</u></string>
    <string name="main_preferences_ask_secchi_disk">Ask as about Secchi Disk</string>
    <string name="main_preferences_ask_plastic_scale">Ask about FU Scale</string>
    <string name="main_preferences_send_title"><u>Data Upload Preferences</u></string>
    <string name="main_preferences_send_on_off">Data Upload On/Off</string>
    <string name="main_preferences_send_wifi">Upload only Wi-Fi Connected</string>
    <string name="main_preferences_send_mail_title">Send final Survey to</string>
    <string name="main_preferences_exit_save_yes">Yes</string>
    <string name="main_preferences_exit_save_no">No</string>
    <string name="main_preferences_exit_ask_save_changes">Values are changed. Save new values?</string>
    <string name="main_secchidisk_ask_question">Do you have a Secchi Disk?</string>
    <string name="main_secchidisk_ask_yes">Yes</string>
    <string name="main_secchidisk_ask_ok">OK</string>
    <string name="main_secchidisk_ask_no">No</string>
    <string name="main_secchidisk_ask_cancel">Cancel</string>
    <string name="main_secchidisk_ask_estimated_depth">Enter estimated Secchi Disk Depth (in meters, can use decimals).</string>
    <string name="main_secchidisk_ask_estimated_depth_bad_format">Bad format in Secchi Disk depth</string>
    <string name="main_panelsun_location_dialog_loading">Automatic Sun Position</string>
    <string name="main_panelsun_location_dialog_getting">Please wait &#8230;</string>
    <string name="main_panelsun_location_dialog_cancel">Cancel Automatic Sun Position</string>
    <string name="main_panelsun_arrow_content_description">Image to ilustrate how to point the sun</string>
    <string name="main_panelsun_instructions1">Point the device to the sun and touch the screen.</string>
    <string name="main_panelsun_instructions2">It doesn’t matter where the sea is.</string>
    <string name="main_panelfuscale_information_content_description">Image to ilustrate pitch value</string>
    <string name="main_panelfuscale_pitch_content_description">Image to ilustrate pitch value</string>
    <string name="main_panelfuscale_work_photo_content_description">Image to work with taken photo</string>
    <string name="main_panelfuscale_instructions1">Take a picture of the water with the sun on your back shining over your left or right shoulder, keeping the smartphone at an angle between horizontal and 30º.</string>
    <string name="main_panelfuscale_instructions1_secchi">Take a picture of the water with the sun on your back shining over the left or right shoulder, keeping the smartphone at an angle between the horizontal and 30º. Make sure the Secchi disk is visible (at ½ SDD).</string>
    <string name="title_activity_preference">FU Bar Settings</string>
    <string name="preferences_chooseFuBar">Select FU Bar </string>
    <string name="preferences_redValue">Red</string>
    <string name="preferences_greenValue">Green</string>
    <string name="preferences_blueValue">Blue</string>
    <string name="preferences_visibility">Visibility</string>
    <string name="preferences_btResetAll">Reset All</string>
    <string name="preferences_btAccept">Accept</string>
    <string name="preferences_btCancel">Cancel</string>
  	<string name="help_n_back"><u>Back</u></string>
    <string name="help_0_subtitle1">Index</string>
  	<string name="help_0_pgrf1">• <u>General information</u></string>
  	<string name="help_0_pgrf2">• <u>Colour of natural waters</u></string>
  	<string name="help_0_pgrf3">• <u>The Forel-Ule colour comparator scale</u></string>
  	<string name="help_0_pgrf4">• <u>How to determine Secchi Disk Depth (SDD) and FU(Forel-Ule)</u></string>
  	<string name="help_0_pgrf5">• <u>The Citclops Colour Observation App</u></string>
  	<string name="help_0_pgrf6">• <u>How to use the APP</u></string>
  	<string name="help_0_pgrf7">• <u>History</u></string>
    <string name="help_1_pgrf1">This ‘APP’ has been developed for the Citclops FP-7 project (ww.citclops.eu). The aim is to develop systems to retrieve and use data on water colour, transparency and fluorescence, using low-cost sensors combined with people acting as observers and data carriers.</string>
    <string name="help_1_pgrf2">This APP allows you to measure the colour of natural waters, through the ‘colour measurement’ icon and the transparency if you have a Secchi disk.</string>
    <string name="help_1_pgrf3">Before you start using the APP, you should:\n		•	Read the information on colour\n		•	Read the instructions on how to do the measurements\n		•	set your preferences\n</string>
    <string name="quick_help_1_pgrf1"><b>Look</b> at water and select the part of the picture that best represents the colour of the water you are observing, without foam or sun reflection. If you have a Secchi disk (at ½ SDD), make sure it appears on the picture and you select that part. Do not wear sunglasses for this.\nThen, tap the <b>cut</b> button. </string>
    <string name="quick_help_1_pgrf2"><b>Compare</b> the coloured bars with either the colour of the water you are observing  </string>
    <string name="quick_help_1_pgrf3">or, if easier, with the colour of the picture you just cut. If you have a Secchi disk compare the coloured bars with the colour of the water above it (at ½ SDD).</string>
    <string name="quick_help_1_pgrf4"><b>Select</b> one of the bars (3 colour tones each) that matches the colour of the water you are observing (Swipe the bar to see all the options). Then tap the select button (hand).</string>
    <string name="help_2_subtitle1">Colour of natural waters</string>
    <string name="help_2_pgrf1">Colour, together with clarity, is one of the most apparent characteristics to the human eye when observing natural water. In general, the apparent colour is a result of substances that are either suspended or dissolved in the water column. There are 3 main natural components, besides the water itself (blue), affecting the water colour and clarity in natural environments:</string>
    <string name="help_2_pgrf2">1) <b>Phytoplankton</b> (generally green)\n2) <b>Non-algal matter, such as fine soils</b> (milky, grey to dark)\n3) <b>Dissolved organic matter</b> (yellow to brownish)</string>
   	<string name="help_6_subtitle1"><b>Step 1.</b> Set your preferences (Main Screen)</string>
   	<string name="help_6_pgrf1"><b>Go</b> to ‘App Preferences’\n<b>Select</b> your options.\n	•	Profile Preferences, if you are not sure about your profile, just click on ‘volunteer’.\n	•	Measurement preferences, if you have a Secchi disk and a FU scale, you can allow the APP to ask you for the values you have measured.\n		•	Data Upload preferences, in case you do not want the data to be uploaded at the moment, or only when it is connected to WIFI.\n</string>
   	<string name="help_6_subtitle2"><b>Step 2.</b> Return to Main Screen</string>
   	<string name="help_6_pgrf2">•	If you have a Secchi Disk (SD) first determine Secchi Disk Depth (SDD, in meters)\n•	If you have a Modern Forel-Ule (FU) scale establish FU observation above the Secchi disk at ½ SD depth.</string>
	<string name="help_6_pgrf3">In case you have an FU scale and/or SD you should set the measurement preferences (initial screen) to be asked about introducing these values.</string>
   	<string name="help_6_subtitle3"><b>Step 3.</b> Go to Colour Measurement (Main Screen)</string>
  	<string name="help_6_pgrf4"><b>Step 4.</b> Select the colour measurement icon   </string>
  	<string name="help_6_pgrf5"><b>Step 5.</b> Take a picture of the water with the sun on your back, over your left or right shoulder. The angle of the camera with respect to the water surface should be less than 30º. If it is cloudy and you do not see the sun, do not worry and just take a picture. If you have a Secchi disk, make sure it appears on the picture.</string>
  	<string name="help_6_pgrf6"><b>Step 6.</b> Look at water and select the part of the picture that best represents the colour of the water you are observing without foam or sun reflection. If you have a Secchi disk (at ½ SDD), make sure it appears on the picture and you select that part. Do not wear sunglasses for this.\nThen, tap the cut button.</string>
  	<string name="help_6_pgrf7"><b>Step 7.</b> Compare the coloured bars with either the colour of the water you are observing or, if easier, with the colour of the picture you just cut. If you have a Secchi disk compare the coloured bars with the colour of the water above it (at ½ SDD). </string>
  	<string name="help_6_pgrf8"><b>Step 8.</b> Select one of the bars (3 colour tones each) that matches the colour of the water you are observing (Swipe the bar to see all the options). Then tap the select button (hand). </string>
  	<string name="help_6_pgrf9"><b>Step 9.</b> Answer questions</string>
  	<string name="help_6_pgrf10"><b>Step 10.</b> Click Send </string>
  	<string name="help_6_pgrf11"><b>Step 11.</b> Answer survey questions (optional)</string>
</resources>