<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_subtitle1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_subtitle2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:layout_margin="5dip"
	        android:textColor="#FFD02B54"
	        android:text="@string/help_6_pgrf3"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_subtitle3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf4"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf5"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page6_img1" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf6"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	    
	  	<ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page6_img2" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf7"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page6_img2a" />
	    
	    
	    	       	    
	   	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf8"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
		<ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page6_img3" />
			   	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf9"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
		<ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page6_img4" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf10"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_6_pgrf11"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/fuscale_help_6_back"	        	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginTop="15dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="25dip"
	        android:layout_marginBottom="15dip"	        
	        android:textColor="#FF002654"
	        android:text="@string/help_n_back"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	    	    	   	
	</LinearLayout>
</ScrollView>

