<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="15dip"	        	    
	    android:orientation="vertical" >

		<ImageView
		    android:layout_width="125dip"
		    android:layout_height="67dip"
		    android:layout_margin="5dip"
		    android:layout_gravity="right"
		    android:src="@drawable/citclops_intro" />
		
	    <TextView
	        android:layout_marginBottom="15dip"	        	        
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="#FF417E93"
	        android:text="@string/help_0_subtitle1"
	        android:textAppearance="?android:attr/textAppearanceLarge" />		
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf1"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf2"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf3"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    	    
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf4"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf4"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    	    	    
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf5"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf5"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    	    	    	    
	    <TextView
	        android:id="@+id/fuscale_help_0_pgrf6"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf6"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    	    	    	    	    
		<TextView
	        android:id="@+id/fuscale_help_0_pgrf7"	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_0_pgrf7"
	        android:textAppearance="?android:attr/textAppearanceMedium" />	    	    	    	    	    	    
	</LinearLayout>
</ScrollView>