<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="15dip"	        
	    android:orientation="vertical" >

		<ImageView
		    android:layout_width="125dip"
		    android:layout_height="67dip"
		    android:layout_margin="5dip"
		    android:layout_gravity="left"
		    android:src="@drawable/citclops_intro" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_1_pgrf1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"	        
	        android:textColor="#FF002654"
	        android:text="@string/help_1_pgrf2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_1_pgrf3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <TextView
	        android:id="@+id/fuscale_help_1_back"	        	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginTop="15dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="25dip"
	        android:layout_marginBottom="15dip"	        
	        android:textColor="#FF002654"
	        android:text="@string/help_n_back"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	</LinearLayout>
</ScrollView>