<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
	        android:layout_marginTop="5dip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:textColor="#FF417E93"
	        android:text="@string/help_2_subtitle1"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/help_page2_img1" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_2_pgrf1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/help_2_pgrf2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/fuscale_help_2_back"	        	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginTop="15dip"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="25dip"
	        android:layout_marginBottom="15dip"	        
	        android:textColor="#FF002654"
	        android:text="@string/help_n_back"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	</LinearLayout>
</ScrollView>
