<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/quick_help_1_pgrf1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	    
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_margin="5dip"	        	        
	        android:src="@drawable/quick_help_page1_img1" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/quick_help_1_pgrf2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_margin="5dip"	        
	        android:src="@drawable/quick_help_page1_img2" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/quick_help_1_pgrf3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    	    
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/quick_help_page1_img3" />
	    	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip"
	        android:textColor="#FF002654"
	        android:text="@string/quick_help_1_pgrf4"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	</LinearLayout>
</ScrollView>